# ascii-renderer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ascii-renderer  cmake_install.cmake  main.c  requirements.md
.cache/clangd/index/: ffmpeg-utils.c.2ADB3111040A1057.idx  ffmpeg-utils.h.2434E762E51F31EC.idx  logger.h.8B9DA4971D667428.idx  main.c.9A246D348E4979E9.idx
includes/: ffmpeg-utils.h  logger.h
utils/: ffmpeg-utils.c
